# AzureKeyVaultCurl

./: CMakeLists.txt  LICENSE  README.md  base64.c  base64.h  ectest.c  openssltest.c  openssltest.h  startbuild.sh  testCurl.c  testCurl.vcxproj
linuxvm-build-agent/: README.md  buildagent.main.bicep  buildagent.main.json  buildagent.parameters.json  buildagent.vm.bicep  buildagent.vmscript.bicep  startbuild.sh
